--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "mockapi": "json-server --watch db.json --port 6173"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.3",
